--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html>
+<html lang='ru'>
 
 <head>
     <meta charset="UTF-8">
+    <title>Pamm Traders</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -142,16 +143,16 @@
                                             <!-- tabs header -->
                                             <div class="relative flex flex-row items-center">
                                                 <button data-type="tabs" data-target="#tab-1"
-                                                    class="active active:bg-[#363946] w-1/3 px-[12px] flex flex-col items-center gap-1 relative rounded-md pt-[5px] pb-[7px] text-[#878991]">
-                                                    <p class="text-[12px] font-normal leading-[17px]">PAMM</p>
+                                                    class="active active:bg-[#363946] w-1/3 px-[12px] text-[12px] font-normal leading-[17px] flex flex-col items-center gap-1 relative rounded-md pt-[5px] pb-[7px] text-[#878991]">
+                                                    PAMM
                                                 </button>
                                                 <button data-type="tabs" data-target="#tab-2"
-                                                    class="w-1/3 px-[12px] flex flex-col items-center gap-1 relative mx-[7px] rounded-md pt-[5px] pb-[7px] bg-[#F5F7FA] text-[#878991]">
-                                                    <p class="text-[12px] font-normal leading-[17px]">InstaCopy</p>
+                                                    class="w-1/3 px-[12px] flex flex-col items-center text-[12px] font-normal leading-[17px] gap-1 relative mx-[7px] rounded-md pt-[5px] pb-[7px] bg-[#F5F7FA] text-[#878991]">
+                                                    InstaCopy
                                                 </button>
                                                 <button data-type="tabs" data-target="#tab-3"
-                                                    class="w-1/3 px-[12px] flex flex-col items-center gap-1 relative rounded-md pt-[5px] pb-[7px] bg-[#F5F7FA] text-[#878991]">
-                                                    <p class="text-[12px] font-normal leading-[17px]">Портфели</p>
+                                                    class="w-1/3 px-[12px] text-[12px] font-normal leading-[17px] flex flex-col items-center gap-1 relative rounded-md pt-[5px] pb-[7px] bg-[#F5F7FA] text-[#878991]">
+                                                    Портфели
                                                 </button>
 
                                             </div>
