--- a/pamm_traders.html
+++ b/pamm_traders.html
@@ -272,18 +272,18 @@
                                                 <!-- tabs header -->
                                                 <div class="relative flex flex-row items-center">
                                                     <button data-type="tabs" data-target="#tab-1"
-                                                        class="active active:bg-[#363946] w-1/3 px-[12px] flex flex-col items-center gap-1 relative rounded-md pt-[5px] pb-[7px] text-[#878991]">
-                                                        <p class="text-[12px] font-normal leading-[17px]">PAMM</p>
+                                                        class="active active:bg-[#363946] w-1/3 px-[12px] text-[12px] font-normal leading-[17px] flex flex-col items-center gap-1 relative rounded-md pt-[5px] pb-[7px] text-[#878991]">
+                                                        PAMM
                                                     </button>
                                                     <button data-type="tabs" data-target="#tab-2"
-                                                        class="w-1/3 px-[12px] flex flex-col items-center gap-1 relative mx-[7px] rounded-md pt-[5px] pb-[7px] bg-[#F5F7FA] text-[#878991]">
-                                                        <p class="text-[12px] font-normal leading-[17px]">InstaCopy</p>
+                                                        class="w-1/3 px-[12px] flex flex-col items-center text-[12px] font-normal leading-[17px] gap-1 relative mx-[7px] rounded-md pt-[5px] pb-[7px] bg-[#F5F7FA] text-[#878991]">
+                                                        InstaCopy
                                                     </button>
                                                     <button data-type="tabs" data-target="#tab-3"
-                                                        class="w-1/3 px-[12px] flex flex-col items-center gap-1 relative rounded-md pt-[5px] pb-[7px] bg-[#F5F7FA] text-[#878991]">
-                                                        <p class="text-[12px] font-normal leading-[17px]">Портфели</p>
+                                                        class="w-1/3 px-[12px] text-[12px] font-normal leading-[17px] flex flex-col items-center gap-1 relative rounded-md pt-[5px] pb-[7px] bg-[#F5F7FA] text-[#878991]">
+                                                        Портфели
                                                     </button>
-    
+
                                                 </div>
                                                 <div class="flex flex-col">
                                                     <div id="tab-1" role="tabpanel"
