--- a/pamm_traders.html
+++ b/pamm_traders.html
@@ -436,7 +436,7 @@
         <a class=" rounded-md font-normal  text-sm leading-[26px] text-center text-white	inline-flex bg-[#1E7BE2] px-[40px] pt-[10px] pb-[12px]"
             href="">Открыть ПАММ-счет</a>
     </div>
-    <div class="container mx-auto 2xl:px-[148px] xl:px-[148px]">
+    <div class="container mx-auto 2xl:px-[128px] lx:px-[80px] xl:px-[80px]">
             <div class="faq-containers flex justify-between mt-[100px]">
                 <h4 class=" font-medium text-[22px] leading-[30px] flex items-center text-[#363946]">Часто
                     задаваемые вопросы</h4>
